--- a/events2.html
+++ b/events2.html
@@ -1,2 +1,35 @@
 <!DOCTYPE html>
+<head>
 <title> Events </title>
+<link rel = "icon" href = image/date.jpeg>
+</head>
+
+<body bgcolor = "black" style="color : white">
+<center>
+<h1>Events Makers</h1>
+<p> Stay with our website for events making. Stay connected</p>
+<hr>
+<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, quam nobis amet aperiam voluptatum sunt dicta, fuga doloremque iusto ut, consequatur blanditiis corrupti debitis. Repellendus, itaque quis porro veritatis quo inventore deleniti minus repudiandae enim tenetur odio, quibusdam possimus quisquam mollitia libero distinctio delectus maiores. Eius officia deleniti commodi quam beatae. Repellendus, velit veniam. Itaque necessitatibus quos quis, architecto aut sit tenetur labore repellendus expedita, maiores temporibus nihil. Quo molestiae ipsa adipisci optio quaerat eveniet porro ex quibusdam, non, sint maxime blanditiis eius possimus dolores sapiente. Aspernatur modi, perferendis voluptatum unde quam amet vitae iusto ad obcaecati esse quis cumque.</p>
+<img src= "image/event_1.jpeg" Width="750pxl">
+<h1>Photo Gallery</h1>
+<h2>Free entry | Free Food | Pets are not allowed</h2>
+<hr>
+</center>
+
+<Center>
+<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aliquam mollitia laborum, nobis dolor ipsam! Provident, libero adipisci. Nisi exercitationem a earum consequuntur animi consectetur adipisci, autem neque similique facilis quis hic rerum sit, suscipit, tenetur veniam modi sunt praesentium inventore ipsam. Labore quae perferendis quisquam eos laudantium suscipit iste.</p>
+<img src="image/event_2.jpeg" Width="750pxl">
+<h2><a href = "http://admin.pavanretailing.com/">Pavan Store</a></h2>
+<h2>Fee Login | Free Shipping | Cash on Delivery</h2>
+<br>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo odit voluptatibus quisquam similique officiis temporibus quaerat eum dignissimos porro explicabo, dolor, pariatur nisi culpa molestiae praesentium, quasi vero amet! Dolorum amet unde inventore reprehenderit excepturi accusantium dignissimos, perferendis distinctio facilis qui, quae quam quas ipsa! Odit, unde aperiam! Porro optio veritatis molestiae nemo saepe, eum, sapiente fugit vitae ad est dolor harum nulla, iure sed aliquid accusantium quae rem? Aliquam quo eaque laboriosam sed earum! Quaerat eos, officia corporis animi, optio incidunt culpa dignissimos neque deleniti repellat molestias, totam a officiis quas necessitatibus ipsa at! Eum possimus ullam temporibus non!</p>
+<hr>
+</Center>
+
+<center>
+<h1>Contact</h1>
+<h2>Pasakuttai, Coimbatore,641653</h2>
+<p>+91 8760061177 | periyasamyk2408@gmail.com</p>
+</center>
+
+</body>
