--- a/tables.html
+++ b/tables.html
@@ -15,7 +15,7 @@
 
 <center>
 <h1> Dream 11 Team </h1>
-<table border="5" bgcolor = "green" style="color: yellow">
+<table border="5" bgcolor = "blue" style="color: yellow">
     <tr>
         <td><h3>Name</h3></td><td>Age</td><td>CSK</td>
     </tr>
